--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
 	<div class="container">
-		© 2017 STC | Cloud Services Portal. All rights reserved
+		© 2017 STC | Infrastructer & cloud services. All rights reserved
 	</div>
 </footer>
