--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -10,7 +10,7 @@
 			</button>
 			<a class="navbar-brand" href="index.html">
 				<img src="images/logo.png" alt="">
-				<span>Cloud Services Portal</span>
+				<span>Infrastructer & cloud services</span>
 			</a>
 	    </div>
 
