--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -688,7 +688,7 @@ div.info-block {
 */
 .slider {
     background-color: #FFF;
-    max-height: 336px;
+    max-height: 360px;
     overflow: hidden;
     .slider-carousel .owl-item {
         margin: 12px 0;
@@ -822,6 +822,32 @@ div.info-block {
                 }
             }
         }
+        .owl-nav.disabled + .owl-dots {
+            margin-top: 10px;
+        }
+    }
+    .owl-dots {
+        text-align: center;
+        -webkit-tap-highlight-color: transparent;
+        .owl-dot {
+            display: inline-block;
+            zoom: 1;
+            span {
+                width: 10px;
+                height: 10px;
+                margin: 5px 7px;
+                background: #D6D6D6;
+                display: block;
+                -webkit-backface-visibility: visible;
+                transition: opacity 200ms ease;
+                border-radius: 30px;
+            }
+            &.active, &:hover {
+                span {
+                    background: #6f3974;
+                }
+            }
+        }
     }
 }
 
@@ -869,13 +895,13 @@ div.info-block {
         border: none;
         li {
             border-top: 1px solid #d7d7d7;
-            height: 40px;
+            min-height: 40px;
             border-left: none;
             border-right: none;
             border-bottom: none;
             border-radius: 0;
             padding: 0;
-            line-height: 40px;
+            line-height: 38px;
             margin: 0;
             .icon {
                 float: left;
@@ -920,7 +946,7 @@ div.info-block {
     background-size: 115px 100px;
     background-repeat: no-repeat;
     background-position: right 2px;
-    min-height: 453px;
+    min-height: 477px;
     
     .block-body {
         padding: 0;
