--- a/app/partials/_cart_modal.html
+++ b/app/partials/_cart_modal.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-primary pull-right cart-checkout" disabled>Checkout</button>
-                    <a href="cart.html" class="btn btn-primary pull-right cart-add">Add to Cart</a>
+                    <a href="#" class="btn btn-primary pull-right cart-add">Add to Cart</a>
                 </div>
             </form>
         </div>
