--- a/app/partials/navbar.html
+++ b/app/partials/navbar.html
@@ -18,9 +18,9 @@
 	    <div class="collapse navbar-collapse">
 	    	<ul class="nav navbar-nav" id="main-menu">
 	            <li>
-	            	<a href="#">
+	            	<a href="service.html">
 	            		<img src="images/icons/service.svg" alt="">
-	            		Service
+	            		Services Catalog
 	            	</a>
 	            </li>
 	            <li>
@@ -87,10 +87,10 @@
 		<li class="no-link dropdown-header main-menu visible-xs">Main Menu</li>
 		<li class="no-link dropdown-header cart-menu visible-xs">Cart</li>
 		<li class="no-link dropdown-header other-menu visible-xs">Other</li>
-		<li><a href="#">About</a></li>
-		<li><a href="#">About</a></li>
-		<li><a href="#">About</a></li>
-		<li><a href="#">About</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="requests.html">Requests</a></li>
+		<li><a href="approvals.html">Approvals</a></li>
+		<li><a href="vm.html">Virtual Machines</a></li>
     </ul>
 </nav>
 <!-- End Sidebar Menu --> 
